--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -222,7 +222,9 @@
                 </div>
             </div>
             
-            <p class="dropDownButton"><a href="{% url 'venue' %}">Venue Bookings</a></p>
+            <div class="dropDownMenu">
+                <p class = "dropDownButton"><a href="{% url 'venue' %}">Venue Bookings</a></p>
+            </div>
 
 
         </div>
@@ -233,9 +235,10 @@
 
         <nav>
             <div class ="mobile-actions">
+                <a href="{% url 'Raul-SecondHome' %}"><img src="{% static 'Raul/Icons/Icons_Large/home.png' %}" alt="Home"></a>
                 <a href="{% url 'login' %}" title="Shopping Cart" id = "mobile-shopping"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
-            <a href="{% url 'cart' %}" title="Shopping Cart" id = "mobile-shopping"><img src="{% static 'Raul/Icons/Icons_Large/cart.png' %}" alt="Cart"></a>
-            <a><img src = "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false"></a>
+                <a href="{% url 'cart' %}" title="Shopping Cart" id = "mobile-shopping"><img src="{% static 'Raul/Icons/Icons_Large/cart.png' %}" alt="Cart"></a>
+                <a><img src = "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false"></a>
             </div>
             <ul id="contentHam">
 
