--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -3,14 +3,37 @@
 {% load static %}
 {%load crispy_forms_tags %}
 
+<head>
+    <style>
+        form{
+            margin:0 auto;
+            width:600px;
+            padding:20px;
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .form-group label{
+            font-size: 20px;
+        }
+
+        .form-group input{
+            background: white;
+            -webkit-text-fill-color: black ;
+            
+        }
+    </style>
+</head>
+
 
 <div class="conatiner" style="padding-top: 300px">
     <form method="POST">
         {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Reset Password</legend>
+        <div class="form-group">
+            <h1>Reset Password</h1>
             {{form|crispy}}
-        </fieldset>
+        </div>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Request Password</button>
         </div>
