--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -231,8 +231,9 @@
 
     <nav>
         <div class ="mobile-actions">
-            <a href="{% url 'login' %}" title="Shopping Cart" id = "mobile-shopping"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
-        <a href="{% url 'cart' %}" title="Shopping Cart" id = "mobile-shopping"><img src="{% static 'Raul/Icons/Icons_Large/cart.png' %}" alt="Cart"></a>
+            <a href="{% url 'Raul-SecondHome' %}"><img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"></a>
+            <a href="{% url 'login' %}" title="Shopping Cart" id = "mobile-shopping"><img src = "{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></a>
+            <a href="{% url 'cart' %}" title="Shopping Cart" id = "mobile-shopping"><img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"></a>
         <a><img src = "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false"></a>
         </div>
         <ul id="contentHam">
