--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -5,6 +5,11 @@
 
 <head>
     <style>
+
+        body{
+            overflow: hidden;
+            height: 100vh;
+        }
         form{
             margin:0 auto;
             width:600px;
@@ -14,6 +19,13 @@
             -webkit-text-fill-color: transparent;
         }
 
+        .container3{
+            background-color: rgba(0,0,0,0.2);
+            margin: 250px auto;
+            width:50%;
+            padding:50px
+        }
+
         .form-group label{
             font-size: 20px;
         }
@@ -21,13 +33,36 @@
         .form-group input{
             background: white;
             -webkit-text-fill-color: black ;
-            
+        }
+
+        .form-group{
+            margin:0 auto;
+            text-align: center;
+        }
+
+        .form-group button{
+            background:#cfbb63;
+            outline: none;
+            border: none;
+            border-radius: 6px;
+            -webkit-text-fill-color: rgba(0,0,0,0.5);
+            padding: 16px 32px;
+            font-size: 15px;
+            font-weight: bold;
+            font-family: myFirstFont;
+            margin: 0 auto;
+            transition: 0.4 ease-in-out;
+        }
+
+        .form-group button:hover{
+            box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
+            cursor: pointer;
         }
     </style>
 </head>
 
 
-<div class="conatiner" style="padding-top: 300px">
+<div class="container3" >
     <form method="POST">
         {% csrf_token %}
         <div class="form-group">
@@ -35,7 +70,7 @@
             {{form|crispy}}
         </div>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Request Password</button>
+            <button type="submit">Request Password</button>
         </div>
     </form>
 </div>
