--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,7 +1,58 @@
 {% extends "Raul/base.html" %}
 {% block content %}
-<div class="alert alert-info">
-    Your password has been set.
+<head>
+    <style>
+        body{
+            overflow: hidden;
+            height: 100vh;
+        }
+
+        .headers{
+            background-color: #6d6d6d;
+        }
+
+        .passwordSet{
+            background-color: rgba(0,0,0,0.2);
+            padding:64px 32px;
+            width:50%;
+            margin:300px auto;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+        }
+
+        .alert{
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 25px;
+            padding:30px 0;
+        }
+
+        .passwordSet a{
+            color:black;
+            padding:16px 32px;
+            background-color:#cfbb63;
+            margin:0px auto;
+            border-radius: 6px;
+            transition: 0.4s ease-in-out;
+        }
+
+        .passwordSet a:hover{
+            box-shadow: 0 0 5px 1px rgba(0,0,0,0.3);
+            cursor: pointer;
+        }
+        
+    </style>
+</head>
+
+<div class="passwordSet">
+    <div class="alert">
+        Your password has been set.
+    </div>
+
+    <a href="{% url 'login' %}">Sign In Here</a>
 </div>
-<a href="{% url 'login' %}">Sign In Here</a>
+
 {% endblock content %}
