--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -2,15 +2,80 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
+<head>
+    <style>
+              body{
+            overflow: hidden;
+            height: 100vh;
+        }
+        form{
+            margin:0 auto;
+            width:600px;
+            padding:20px;
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .headers{
+            background-color: #6d6d6d;
+        }
+
+        .content-section{
+            background-color: rgba(0,0,0,0.2);
+            margin: 200px auto;
+            width:50%;
+            padding:20px
+        }
+
+        .form-group label{
+            font-size: 20px;
+        }
+
+        li{
+            list-style: none;
+        }
+
+        .form-group input{
+            background: white;
+            -webkit-text-fill-color: black ;
+        }
+
+        .form-group{
+            margin:0 auto;
+            text-align: center;
+        }
+
+        .form-group button{
+            background:#cfbb63;
+            outline: none;
+            border: none;
+            border-radius: 6px;
+            -webkit-text-fill-color: rgba(0,0,0,0.5);
+            padding: 16px 32px;
+            font-size: 15px;
+            font-weight: bold;
+            font-family: myFirstFont;
+            margin: 0 auto;
+            transition: 0.4 ease-in-out;
+        }
+
+        .form-group button:hover{
+            box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
+            cursor: pointer;
+        }
+    </style>
+</head>
+
 
 
 <div class="content-section">
     <form method="POST">
         {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Reset Password</legend>
+        <div class="form-group">
+            <h1>Reset Password</h1>
             {{ form|crispy }}
-        </fieldset>
+        </div>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Request Password</button>
         </div>
