--- a/users/templates/users/venue.html
+++ b/users/templates/users/venue.html
@@ -31,14 +31,14 @@
             left:0;
             top:0;
             position: absolute;
-            background-image: url('Images/venueBack.jpg');
+            background-image: url("Images/venueBack.jpg");
             width:100%;
             height: 100vh;
-            z-index: -1;
+            z-index: 0;
             background-position: center;
             background-size: cover;
             filter: brightness(50%);
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         .venueBox{
