--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -231,8 +231,16 @@
 
     <nav>
         <div class ="mobile-actions">
+            <a href="{% url 'Raul-SecondHome' %}"><img src="{% static 'Raul/Icons/Icons_Large/home.png' %}" alt="Home"></a>
             {% if user.is_authenticated %}
-            <a href="{% url 'profile' %}" title="Shopping Cart" id = "mobile-shopping"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
+            <a onclick="openProfile()"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
+            <div class = "profileDropDown">
+                <div class="profileOptions" id = "profileDrop">
+                    <a onclick="closeProfile()">X</a>
+                    <a href="{% url 'profile' %}">Profile</a>
+                    <a href="{% url 'logout' %}">Logout</a>
+                </div>
+            </div>
             {% else %}
             <a href="{% url 'login' %}" title="Shopping Cart" id = "mobile-shopping"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
             {% endif %}
