--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -236,7 +236,18 @@
         <nav>
             <div class ="mobile-actions">
                 <a href="{% url 'Raul-SecondHome' %}"><img src="{% static 'Raul/Icons/Icons_Large/home.png' %}" alt="Home"></a>
+                {% if user.is_authenticated %}
+                <a onclick="openProfile()"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
+                <div class = "profileDropDown">
+                    <div class="profileOptions" id = "profileDrop">
+                        <a onclick="closeProfile()">X</a>
+                        <a href="{% url 'profile' %}">Profile</a>
+                        <a href="{% url 'logout' %}">Logout</a>
+                    </div>
+                </div>
+                {% else %}
                 <a href="{% url 'login' %}" title="Shopping Cart" id = "mobile-shopping"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
+                {% endif %}
                 <a href="{% url 'cart' %}" title="Shopping Cart" id = "mobile-shopping"><img src="{% static 'Raul/Icons/Icons_Large/cart.png' %}" alt="Cart"></a>
                 <a><img src = "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false"></a>
             </div>
@@ -670,7 +681,11 @@
     <div class="filler"></div>
 
     <div class ="bannerSecond">
-
+        <div class="layout">
+            <div class="layoutButton">
+                Shop This Layout.
+            </div>
+        </div>
     </div>
 
     <div class="filler" id ="borderBottom"></div>
