--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,5 +1,30 @@
-
+{% extends "Raul/base.html" %}
+{% block content %}
 {% load crispy_forms_tags %}
-<div class="alert alert-info">
-    An email has been sent with instructions to reset your password
+
+<head>
+    <style>
+
+        .passwordMessage{
+            margin:300px auto;
+            width: 100%;
+            text-align: center;
+        }
+        .alert{
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 25px;
+            padding:30px 0;
+            margin: auto;
+        }
+    </style>
+</head>
+<div class="passwordMessage">
+    <div class="alert">
+        An email has been sent with instructions to reset your password.<br>Please check your email! 
+    </div>
 </div>
+
+
+{% endblock %}
