phone nav bar updates

--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -319,9 +319,9 @@
             </li>
             <li>
                 <div class = "menuDropdown">
-                    <button class = "mobile-dropdownButton">
-                        <a href="{% url 'Raul-product' %}">all products</a>
-                    </button>
+                    <a href="{% url 'Raul-product' %}"><button class = "mobile-dropdownButton">
+                        all products
+                    </button></a>
                 </div>
             </li>
             <li>
