--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -323,9 +323,9 @@
                 </li>
                 <li>
                     <div class = "menuDropdown">
-                        <button class = "mobile-dropdownButton">
+                       <a href="{% url 'Raul-product' %}"> <button class = "mobile-dropdownButton">
                             all products
-                        </button>
+                        </button></a>
                     </div>
                 </li>
                 <li>
