--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -273,6 +273,7 @@
                 <br>
                 <button value="Login" name="login" type="submit">Login</button>
             </form>
+            <a href="{% url 'password_reset' %}">Forgot Password?</a><br>
             <a href="#register">Don't have an account?</a>
         </div>
     </div>
