--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -64,6 +64,25 @@
             box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
             cursor: pointer;
         }
+
+        @media (max-width:768px){
+            .content-section{
+                width:90%;
+                padding:20px 0;
+            }
+
+            form{
+                width: auto;
+            }
+
+            .form-group button{
+                margin:20px auto;
+            }
+
+            .form-group input{
+                margin:10px auto;
+            }
+        }
     </style>
 </head>
 
