--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -58,6 +58,29 @@
             box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);
             cursor: pointer;
         }
+
+        @media (max-width: 768px){
+            .container3{
+                padding:50px 0;
+                margin:250px auto;
+                width:90%;
+
+            }
+
+            form{
+                width: auto;
+            }
+
+            .form-group button{
+                margin:20px auto;
+            }
+
+            .form-group input{
+               margin:10px auto;
+            }
+
+
+        }
     </style>
 </head>
 
