--- a/users/templates/users/venue.html
+++ b/users/templates/users/venue.html
@@ -25,22 +25,6 @@
             border:none;
         }
 
-        .venueBackground{
-            margin:0;
-            padding:0;
-            left:0;
-            top:0;
-            position: absolute;
-            background-image: url("Images/venueBack.jpg");
-            width:100%;
-            height: 100vh;
-            z-index: 0;
-            background-position: center;
-            background-size: cover;
-            filter: brightness(50%);
-            /* overflow: hidden; */
-        }
-
         .venueBox{
             margin:0 auto;
             padding:20px;
@@ -294,6 +278,20 @@
 
             .loginRegister label{
                 margin: 30px 0px;
+            }
+        }
+
+        @media (max-width: 768px){
+            .venueBox{
+                width: auto;
+            }
+
+            #text{
+                margin:30px 10px;
+            }
+
+            #text2{
+                margin:30px 10px;
             }
         }
 
