pics done! floral

--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -301,7 +301,7 @@
             <li>
                 <div class = "menuDropdown">
                     <button class = "mobile-dropdownButton" >
-                        floral
+                        <a  href="{% url 'cat-view' 'Floral' %}">floral</a>
                     </button>
                 </div>
             </li>
