--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -305,7 +305,7 @@
                 <li>
                     <div class = "menuDropdown">
                         <button class = "mobile-dropdownButton" >
-                            floral
+                            <a  href="{% url 'cat-view' 'Floral' %}">floral</a>
                         </button>
                     </div>
                 </li>
@@ -474,7 +474,7 @@
                 </a>
                 <a href="{% url 'sec-view' 'Tabletop' %}">
                     <div class="tableImageMobile-2"></div>
-                    <!-- <img src="{%static 'Raul/Images/Tabletop2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
+                    <!-- <img src="{%static 'Raul/Images/Tabletopfinal.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
                 </a>
             </div>
         </div>
@@ -494,7 +494,7 @@
                 </a>
                 <a href="{% url 'sec-view' 'Wallart' %}">
                     <div class="wallImageMobile-2"></div>
-                    <!-- <img src="{%static 'Raul/Images/WallArt2.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
+                    <!-- <img src="{%static 'Raul/Images/WallArtfinal.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
                 </a>
             </div>
         </div>
