--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -254,8 +254,9 @@
             </li>
             <li>
                 <div class = "menuDropdown">
-                    <button class = "mobile-dropdownButton" onclick = "mobileDropDown()">
-                        new arrivals
+                    <button class = "mobile-dropdownButton">
+                       <a href ="{% url 'cart' %}" > new arrivals </a>
+                        </button>
                 </div>
             </li>
             <li>
