--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -17,7 +17,7 @@
 <body>
 <div class="productBanner">
     <div class="productBanner-heading">
-        <p>Products</p>
+        <p>All Products</p>
     </div>
     <hr>
     <!-- <div class="arrowDown">
@@ -56,14 +56,13 @@
 
         </div>
         {% endif %}
-        <div class ="cartNotification" id = "cartPopUp">
-            <div class = "cartAdded">
-               item added to your cart. 
-            </div>
-        </div>
         {% endfor %}
     </div>
-
+    <div class ="cartNotification" id = "cartPopUp">
+        <div class = "cartAdded">
+            item added to your cart.
+        </div>
+    </div>
 </div>
 <!-- <div class ="cartNotification" id = "cartPopUp">
     <div class = "cartAdded">
