--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -2332,8 +2332,7 @@ footer{
         top: 45%;
         left: 50%;
         padding:16px 32px;
-        /* background: -webkit-linear-gradient(#f8f18e,#d6a55b); */
-        background-color: rgba(0,0,0,0.8);
+        background: rgba(0, 0, 0, 0.8) -webkit-linear-gradient(#f8f18e, #d6a55b);
         transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
     }
