--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -60,7 +60,11 @@
         {% endif %}
         {% endfor %}
     </div>
-
+    <div class ="cartNotification" id = "cartPopUp">
+        <div class = "cartAdded">
+            item added to your cart.
+        </div>
+    </div>
 </div>
 
 <button onclick="topFunction()" id="scrollTop"> <img src="{% static 'Raul/Images/arrowDown.png' %}"> </button>
@@ -82,6 +86,11 @@
             location.reload();
         }
     });
+</script>
+<script>
+    function cartNotification(){
+        document.getElementById('cartPopUp').style.animation = "fadeInPop 2.5s";
+    }
 </script>
 </body>
 
