--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -336,7 +336,7 @@
                         <a  href="{% url 'cat-view' 'Bowls' %}">Bowls</a>
                         <a  href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
                         <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
-                        <a href="{% url 'cat-view' 'Vases & Cachepots' %}">Vases and Cachepots</a>
+                        <a href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases and Cachepots</a>
                         <a href="{% url 'cat-view' 'Votives' %}">Votives</a>
                     </div>
                 </div>
@@ -344,7 +344,7 @@
             <li>
                 <div class = "menuDropdown">
                     <button class = "mobile-dropdownButton" onclick = "mobileDropDown()">
-                        venue bookings
+                        <a href ="{% url 'venue' %}">venue bookings</a>
                     </button>
                 </div>
             </li>
